@@ -73,74 +73,75 @@ document.addEventListener("DOMContentLoaded", () => document.querySelectorAll(".
 .newFeatureParser li::marker {content: "🎉 ";}
 </style>
 
-<li id="particle36" >updated scroll</li>
-<li id="particle37" >updated scrollsdk</li></ul>
+<li id="particle36" >if you just type <code>wws [folderName]</code> it will run fetch</li>
+<li id="particle37" >updated scroll</li>
+<li id="particle38" >updated scrollsdk</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle39" class="scrollParagraph">0.22.0 11/12/2024</h1>
-<ul class="newFeatureParser"><li id="particle40" >updated scroll</li>
-<li id="particle41" >updated scrollsdk</li></ul>
+<div class="scrollSection"><h1 id="particle40" class="scrollParagraph">0.22.0 11/12/2024</h1>
+<ul class="newFeatureParser"><li id="particle41" >updated scroll</li>
+<li id="particle42" >updated scrollsdk</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle43" class="scrollParagraph">0.21.0 10/19/2024</h1>
-<ul class="newFeatureParser"><li id="particle44" >update scroll</li></ul>
+<div class="scrollSection"><h1 id="particle44" class="scrollParagraph">0.21.0 10/19/2024</h1>
+<ul class="newFeatureParser"><li id="particle45" >update scroll</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle46" class="scrollParagraph">0.20.0 10/14/2024</h1>
-<ul class="newFeatureParser"><li id="particle47" >added tags</li>
-<li id="particle48" >homepage refresh</li></ul>
+<div class="scrollSection"><h1 id="particle47" class="scrollParagraph">0.20.0 10/14/2024</h1>
+<ul class="newFeatureParser"><li id="particle48" >added tags</li>
+<li id="particle49" >homepage refresh</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle50" class="scrollParagraph">0.19.0 10/13/2024</h1>
+<div class="scrollSection"><h1 id="particle51" class="scrollParagraph">0.19.0 10/13/2024</h1>
 <ul class="bugFixParser"><style>
 .bugFixParser li::marker {content: "🏥 ";}
 </style>
 
-<li id="particle51" >bug fixes</li></ul>
+<li id="particle52" >bug fixes</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle53" class="scrollParagraph">0.18.0 10/13/2024</h1>
-<ul class="newFeatureParser"><li id="particle54" >added delete command</li></ul>
-<ul class="bugFixParser"><li id="particle55" >bug fixes</li></ul>
+<div class="scrollSection"><h1 id="particle54" class="scrollParagraph">0.18.0 10/13/2024</h1>
+<ul class="newFeatureParser"><li id="particle55" >added delete command</li></ul>
+<ul class="bugFixParser"><li id="particle56" >bug fixes</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle57" class="scrollParagraph">0.17.0 10/13/2024</h1>
-<ul class="bugFixParser"><li id="particle58" >bug fixes</li></ul>
+<div class="scrollSection"><h1 id="particle58" class="scrollParagraph">0.17.0 10/13/2024</h1>
+<ul class="bugFixParser"><li id="particle59" >bug fixes</li></ul>
 <ul class="breakingChangeParser"><style>
 .breakingChangeParser li::marker {content: "⚠️ ";}
 </style>
 
-<li id="particle59" >removed branches. not worth the complexity at all.</li></ul>
+<li id="particle60" >removed branches. not worth the complexity at all.</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle61" class="scrollParagraph">0.16.0 10/11/2024</h1>
-<ul class="newFeatureParser"><li id="particle62" >store data in users home dir. Thanks TD!</li></ul>
-<ul class="bugFixParser"><li id="particle63" >bug fixes</li></ul>
+<div class="scrollSection"><h1 id="particle62" class="scrollParagraph">0.16.0 10/11/2024</h1>
+<ul class="newFeatureParser"><li id="particle63" >store data in users home dir. Thanks TD!</li></ul>
+<ul class="bugFixParser"><li id="particle64" >bug fixes</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle65" class="scrollParagraph">0.15.0 10/11/2024</h1>
-<ul class="newFeatureParser"><li id="particle66" >added <a href="http://scroll" target="_blank">http://scroll</a></li></ul>
+<div class="scrollSection"><h1 id="particle66" class="scrollParagraph">0.15.0 10/11/2024</h1>
+<ul class="newFeatureParser"><li id="particle67" >added <a href="http://scroll" target="_blank">http://scroll</a></li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle68" class="scrollParagraph">0.14.0 10/10/2024</h1>
-<ul class="newFeatureParser"><li id="particle69" >various improvements and upgrades</li></ul>
+<div class="scrollSection"><h1 id="particle69" class="scrollParagraph">0.14.0 10/10/2024</h1>
+<ul class="newFeatureParser"><li id="particle70" >various improvements and upgrades</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle71" class="scrollParagraph">0.13.0 10/02/2024</h1>
-<ul class="newFeatureParser"><li id="particle72" >new local homepage</li>
-<li id="particle73" >started support for other branches</li></ul>
+<div class="scrollSection"><h1 id="particle72" class="scrollParagraph">0.13.0 10/02/2024</h1>
+<ul class="newFeatureParser"><li id="particle73" >new local homepage</li>
+<li id="particle74" >started support for other branches</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle75" class="scrollParagraph">0.12.0 10/02/2024</h1>
-<ul class="newFeatureParser"><li id="particle76" >miscelaneous cleanup</li></ul>
+<div class="scrollSection"><h1 id="particle76" class="scrollParagraph">0.12.0 10/02/2024</h1>
+<ul class="newFeatureParser"><li id="particle77" >miscelaneous cleanup</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle78" class="scrollParagraph">0.11.0 9/12/2024</h1>
-<ul class="bugFixParser"><li id="particle79" >bug fixes</li></ul>
+<div class="scrollSection"><h1 id="particle79" class="scrollParagraph">0.11.0 9/12/2024</h1>
+<ul class="bugFixParser"><li id="particle80" >bug fixes</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle81" class="scrollParagraph">0.10.0 9/6/2024</h1>
-<ul class="bugFixParser"><li id="particle82" >upgrade scroll</li></ul>
+<div class="scrollSection"><h1 id="particle82" class="scrollParagraph">0.10.0 9/6/2024</h1>
+<ul class="bugFixParser"><li id="particle83" >upgrade scroll</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle84" class="scrollParagraph">0.9.0 7/11/2024</h1>
-<ul class="newFeatureParser"><li id="particle85" >added descriptions to folders (max 7 words)</li>
-<li id="particle86" >nicer <code>wws list</code> output</li></ul>
-<ul class="breakingChangeParser"><li id="particle87" >moved <code>snippets</code> parser from the <code>root.scroll</code> file to <code>wws.scroll</code> files.</li></ul>
+<div class="scrollSection"><h1 id="particle85" class="scrollParagraph">0.9.0 7/11/2024</h1>
+<ul class="newFeatureParser"><li id="particle86" >added descriptions to folders (max 7 words)</li>
+<li id="particle87" >nicer <code>wws list</code> output</li></ul>
+<ul class="breakingChangeParser"><li id="particle88" >moved <code>snippets</code> parser from the <code>root.scroll</code> file to <code>wws.scroll</code> files.</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle89" class="scrollParagraph">0.8.0 7/10/2024</h1>
-<ul class="newFeatureParser"><li id="particle90" >added new concept of subfolders</li></ul>
+<div class="scrollSection"><h1 id="particle90" class="scrollParagraph">0.8.0 7/10/2024</h1>
+<ul class="newFeatureParser"><li id="particle91" >added new concept of subfolders</li></ul>
 </div>
-<div class="scrollSection"><h1 id="particle92" class="scrollParagraph">0.7.0 7/10/2024</h1>
-<ul class="newFeatureParser"><li id="particle93" >added release notes</li>
-<li id="particle94" >updated Scroll</li>
-<li id="particle95" >moved site registry to <code>root.scroll</code></li></ul>
+<div class="scrollSection"><h1 id="particle93" class="scrollParagraph">0.7.0 7/10/2024</h1>
+<ul class="newFeatureParser"><li id="particle94" >added release notes</li>
+<li id="particle95" >updated Scroll</li>
+<li id="particle96" >moved site registry to <code>root.scroll</code></li></ul>
 </div>
 </div>
 </body>
