@@ -3,7 +3,7 @@
     "version": "0.23.0",
     "releaseDate": "11/26/2024",
     "bugFixes": 0,
-    "newFeatures": 2,
+    "newFeatures": 3,
     "breakingChanges": 0
   },
   {
