@@ -1,5 +1,5 @@
 version	releaseDate	bugFixes	newFeatures	breakingChanges
-0.23.0	11/26/2024	0	2	0
+0.23.0	11/26/2024	0	3	0
 0.22.0	11/12/2024	0	2	0
 0.21.0	10/19/2024	0	1	0
 0.20.0	10/14/2024	0	2	0
