@@ -2,5 +2,5 @@ Name	Values	Coverage	Question	Example	Type	Source	SortIndex	IsComputed	IsRequire
 version	17	100%	What is the semantic version number?	0.23.0	string		1		true	true	📦
 releaseDate	17	100%		11/26/2024	string		1.1	true	true		
 bugFixes	17	100%	How many bug fixes in this release?	0	number		1.2	true			
-newFeatures	17	100%	How many new features in this release?	2	number		1.2	true			
+newFeatures	17	100%	How many new features in this release?	3	number		1.2	true			
 breakingChanges	17	100%	How many breaking changes in this release?	0	number		1.2	true			
